[package]
name = "chainhook-postgres"
version = "0.1.0"
edition = "2021"

[dependencies]
bytes = "1.3"
deadpool-postgres = { workspace = true }
num-traits = "0.2.14"
slog = { version = "2.7.0" }
tokio = { version = "1.38.0", features = ["rt-multi-thread", "macros"] }
tokio-postgres = { workspace = true }

[dev-dependencies]
test-case = "3.1.0"
